<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FingerprintScannerDemo">

    <include
        layout="@layout/info_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/details_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <TextView
        android:id="@+id/firmware_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:text="@string/firmware_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details" />

    <TextView
        android:id="@+id/firmware_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintBaseline_toBaselineOf="@id/firmware_version_label"
        app:layout_constraintLeft_toRightOf="@id/firmware_version_label" />

    <TextView
        android:id="@+id/serial_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:text="@string/serial_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firmware_version_label" />

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintBaseline_toBaselineOf="@id/serial_number_label"
        app:layout_constraintLeft_toRightOf="@id/serial_number_label" />

    <TextView
        android:id="@+id/lfd_level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:text="@string/lfd_level"
        app:layout_constraintBaseline_toBaselineOf="@id/lfd_level"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/lfd_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/lfd_levels"
        app:layout_constraintLeft_toRightOf="@id/lfd_level_label"
        app:layout_constraintTop_toBottomOf="@id/serial_number" />

    <ImageView
        android:id="@+id/fingerimage"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/content_margin_left"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/nofinger"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lfd_level" />

    <TextView
        android:id="@+id/timeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fingerprint_time_info_margin_left"
        android:text="@string/fp_collect_info"
        app:layout_constraintBottom_toTopOf="@id/captureTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/fingerimage" />

    <TextView
        android:id="@+id/captureTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fingerprint_time_info_margin_left"
        android:text="@string/capture"
        app:layout_constraintBottom_toTopOf="@id/extractTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/fingerimage" />

    <TextView
        android:id="@+id/captureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/captureTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/captureTimeLabel" />

    <TextView
        android:id="@+id/extractTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fingerprint_time_info_margin_left"
        android:text="@string/extract"
        app:layout_constraintBottom_toTopOf="@id/generalizeTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/fingerimage" />

    <TextView
        android:id="@+id/extractTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/extractTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/extractTimeLabel" />

    <TextView
        android:id="@+id/generalizeTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fingerprint_time_info_margin_left"
        android:text="@string/generalize"
        app:layout_constraintBottom_toTopOf="@id/verifyTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/fingerimage" />

    <TextView
        android:id="@+id/generalizeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/generalizeTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/generalizeTimeLabel" />

    <TextView
        android:id="@+id/verifyTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fingerprint_time_info_margin_left"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="@id/fingerimage"
        app:layout_constraintLeft_toRightOf="@id/fingerimage" />

    <TextView
        android:id="@+id/verifyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/verifyTimeLabel"
        app:layout_constraintLeft_toRightOf="@id/verifyTimeLabel" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_bar_background_color"
        app:alignmentMode="alignBounds"
        app:columnCount="@integer/config_buttonBarColumnCount"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/bt_enroll"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/enroll_fp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/bt_verify"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/verify_fp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/bt_identify"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/identify_fp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/clear_fp_db"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/bt_show"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/show_fp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>