<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeScannerDemo">

    <include
        layout="@layout/info_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/details_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <TextView
        android:id="@+id/firmware_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:text="@string/firmware_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details" />

    <TextView
        android:id="@+id/firmware_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintBaseline_toBaselineOf="@id/firmware_version_label"
        app:layout_constraintLeft_toRightOf="@id/firmware_version_label" />

    <TextView
        android:id="@+id/serial_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:text="@string/serial_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firmware_version_label" />

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_margin_right"
        app:layout_constraintBaseline_toBaselineOf="@id/serial_number_label"
        app:layout_constraintLeft_toRightOf="@id/serial_number_label" />

    <TextView
        android:id="@+id/data_output_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        android:text="@string/data_output"
        app:layout_constraintTop_toBottomOf="@id/serial_number_label" />

    <TextView
        android:id="@+id/data_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/content_margin_left"
        android:layout_marginEnd="@dimen/content_margin_right"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_bar"
        app:layout_constraintTop_toBottomOf="@id/data_output_label" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_bar_background_color"
        app:alignmentMode="alignBounds"
        app:columnCount="@integer/config_buttonBarColumnCount"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="@dimen/button_bar_button_width"
            android:layout_height="@dimen/button_bar_button_height"
            android:layout_marginStart="@dimen/button_bar_margin_left"
            android:layout_marginEnd="@dimen/button_bar_margin_right"
            android:onClick="onClick"
            android:text="@string/scan_barcode"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>